@@ -1,3 +1,8 @@
+2012-03-30  Richard Guenther <rguenther@suse.de>
+
+	PR middle-end/52772
+	* g++.dg/torture/pr52772.C: New testcase.
+
 2012-03-29  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/52718
